test/FAIL/dispcmd/invalid_arguments/01_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid argument"
#-------

disp 0x10